force-app/main/default/objects/Itinerary_Booking_Supplier__c/fields/Merchant__c.field-meta.xml
<CustomField>
    <fullName>Merchant__c</fullName>
    <formula>Accommodation__r.Account__r.Name+ Transport__r.Account__r.Name+ Meal__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Merchant</label>
    <type>Text</type>
</CustomField>