force-app/main/default/objects/Itinerary_Booking_Supplier__c/fields/Merchant_Account__c.field-meta.xml
<CustomField>
    <fullName>Merchant_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Merchant Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Itinerary Booking Supplier</relationshipLabel>
    <relationshipName>Itinerary_Booking_Supplier</relationshipName>
    <type>Lookup</type>
</CustomField>