force-app/main/default/objects/Itinerary_Booking_Supplier__c/fields/Trip_add_on__c.field-meta.xml
<CustomField>
    <fullName>Trip_add_on__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Trip add-on</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Itinerary__c</field>
            <operation>equals</operation>
            <valueField>Trip_add_on__c.Itinerary__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Trip_add_on__c</referenceTo>
    <relationshipLabel>Itinerary Booking Supplier</relationshipLabel>
    <relationshipName>Itinerary_Booking_Supplier</relationshipName>
    <type>Lookup</type>
</CustomField>